syntax = "proto3";

package spot_instrument_v1;

import "common.proto";

option go_package = "github.com/ewik2k21/grpcSpotInstrumentService/pkg";

message ViewMarketsRequest{
  common.UserRole user_role = 1;
}

message ViewMarketsResponse {
  repeated Market markets = 1;
}

message Market {
  string id = 1;
  string name = 2;
}